--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,17 @@ project(${PROJECT_NAME})
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS roscpp std_msgs message_generation ck_ros_msgs_node rio_control_node ck_utilities_node hmi_agent_node)
+find_package(catkin REQUIRED COMPONENTS
+  roscpp
+  std_msgs
+  message_generation
+  ck_ros_msgs_node
+  rio_control_node
+  ck_utilities_node
+  hmi_agent_node
+  controller_manager
+  rosparam_shortcuts
+)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -106,7 +116,16 @@ catkin_package(
 #  LIBRARIES rio_control_node
 #  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
-  CATKIN_DEPENDS roscpp message_generation message_runtime ck_ros_msgs_node rio_control_node ck_utilities_node hmi_agent_node
+  CATKIN_DEPENDS
+    roscpp
+    message_generation
+    message_runtime
+    ck_ros_msgs_node
+    rio_control_node
+    ck_utilities_node
+    hmi_agent_node
+    controller_manager
+    rosparam_shortcuts
 )
 
 ###########
