--- a/package.xml
+++ b/package.xml
@@ -42,15 +42,22 @@
     <build_depend>rio_control_node</build_depend>
     <build_depend>hmi_agent_node</build_depend>
     <build_depend>ck_ros_msgs_node</build_depend>
+    <build_depend>controller_manager</build_depend>
+    <build_depend>rosparam_shortcuts</build_depend>
   <!-- Use build_export_depend for packages you need in order to build against this package: -->
     <build_export_depend>message_generation</build_export_depend>
     <build_export_depend>rio_control_node</build_export_depend>
     <build_export_depend>hmi_agent_node</build_export_depend>
     <build_export_depend>ck_ros_msgs_node</build_export_depend>
+    <build_export_depend>controller_manager</build_export_depend>
+    <build_export_depend>rosparam_shortcuts</build_export_depend>
   <!-- Use buildtool_depend for build tool packages: -->
   <!--   <buildtool_depend>catkin</buildtool_depend> -->
   <!-- Use exec_depend for packages you need at runtime: -->
     <exec_depend>message_runtime</exec_depend>
+    <exec_depend>controller_manager</exec_depend>
+    <exec_depend>rosparam_shortcuts</exec_depend>
+    <exec_depend>ck_ros_msgs_node</exec_depend>
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <!-- Use doc_depend for packages you need only for building documentation: -->
