--- a/package.xml
+++ b/package.xml
@@ -47,6 +47,7 @@
     <build_depend>control_msgs</build_depend>
     <build_depend>controller_manager</build_depend>
     <build_depend>rosparam_shortcuts</build_depend>
+    <build_depend>trajectory_msgs</build_depend>
   <!-- Use build_export_depend for packages you need in order to build against this package: -->
     <build_export_depend>message_generation</build_export_depend>
     <build_export_depend>rio_control_node</build_export_depend>
@@ -64,6 +65,7 @@
     <exec_depend>control_msgs</exec_depend>
     <exec_depend>rosparam_shortcuts</exec_depend>
     <exec_depend>ck_ros_msgs_node</exec_depend>
+    <exec_depend>trajectory_msgs</exec_depend>
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <!-- Use doc_depend for packages you need only for building documentation: -->
