--- a/package.xml
+++ b/package.xml
@@ -48,6 +48,11 @@
     <build_depend>controller_manager</build_depend>
     <build_depend>rosparam_shortcuts</build_depend>
     <build_depend>trajectory_msgs</build_depend>
+    <build_depend>moveit_msgs</build_depend>
+    <build_depend>moveit_core</build_depend>
+    <build_depend>moveit_ros_planning</build_depend>
+    <build_depend>moveit_ros_planning_interface</build_depend>
+    <build_depend>moveit_ros_move_group</build_depend>
   <!-- Use build_export_depend for packages you need in order to build against this package: -->
     <build_export_depend>message_generation</build_export_depend>
     <build_export_depend>rio_control_node</build_export_depend>
@@ -66,6 +71,11 @@
     <exec_depend>rosparam_shortcuts</exec_depend>
     <exec_depend>ck_ros_msgs_node</exec_depend>
     <exec_depend>trajectory_msgs</exec_depend>
+    <exec_depend>moveit_msgs</exec_depend>
+    <exec_depend>moveit_core</exec_depend>
+    <exec_depend>moveit_ros_planning</exec_depend>
+    <exec_depend>moveit_ros_planning_interface</exec_depend>
+    <exec_depend>moveit_ros_move_group</exec_depend>
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <!-- Use doc_depend for packages you need only for building documentation: -->
